--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -427,6 +427,17 @@
         <item>rectangle profile with cornering</item>
         <item>cut on line</item>
     </string-array>
+  
+  <string-array name="baud_rates">
+    <item>9600</item>
+    <item>19200</item>
+    <item>38400</item>
+    <item>57600</item>
+    <item>115200</item>
+    <item>230400</item>
+    <item>250000</item>
+    <item>460800</item>
+</string-array>
 
 
 
